welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: reassignment to val
    index = index + 1
          ^island:9: error: Int does not take parameters
  	levels += level(num, index)
                       ^island:12: error: value += is not a member of Int
      index += 1
            ^island:15: error: value += is not a member of Int
      index += 1
            ^